making the compiled files work in other folder; use ArrayList instead of Vector; improve use of ContestConfig